@@ -1,3 +1,6 @@
+February 2023
+Show comment or not depending on magic byte 19.
+
 January 2023
 Add BZIP3 recognition. v0.10 format header.
 
